cluster/home/website/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: website-web-svc
    namespace: website
spec:
    selector:
        app: website
    ports:
        - name: http
          targetPort: 8080
          port: 80
