cluster/home/website/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website
  namespace: website
  annotations:
    kubernetes.io/ingress.class: traefik-world
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cjsolsen.com`)
      kind: Rule
      services:
        - name: website-web-svc
          port: 80
      middlewares:
        - name: default-headers
    - match: Host(`www.cjsolsen.com`)
      kind: Rule
      services:
        - name: website-web-svc
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: cjsolsen-com-tls
